# PS5-Drive-Enabler

./: Cargo.toml  LICENSE  README.md  gen3_enabler_bringus.img
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: disk.rs  error.rs  flash.rs  image.rs  lib.rs
core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
gui/: Cargo.toml
gui/src/: main.rs
