[package]
name = "ps5de-core"
description = "Core logic for the PS5 Drive Enabler: disk enumeration and writing the Gen3 enabler image to an NVMe drive."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "ps5de_core"
path = "src/lib.rs"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
